examples/test/testpolicy17363.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17363
  namespace: namespace226
spec:
  podSelector:
    matchLabels:
      key46: value1
      key9: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value24
          key45: value1
      podSelector:
        matchLabels:
          key13: value12
          key3: value20
          key43: value23
